# ylff-latvija

./: .gitignore  DEVELOPMENT_ERRORS.md  docker-compose.yml  git-upload.sh
api/: Dockerfile  YLFF-TERITORIJAS.xlsx  app.py  config.py  create_admin.py  import_objects.py  migrate_pg_to_duckdb.py  pyproject.toml
api/admin/: deactivate.py  delete_media.py  media_detail.py  routes.py  uploads.py  users.py
api/auth/: decorators.py  routes.py  utils.py
api/models/: __init__.py  activation.py  diploma_record.py  expedition_plan.py  media.py  object.py  page_content.py  qso_record.py  user.py
api/routes/: activations.py  admin_activations_manage.py  admin_activations_page.py  admin_adif_upload.py  admin_auth.py  admin_dashboard.py  admin_expeditions.py  admin_objects.py  admin_pages.py  call_search.py  expedition_plan.py  home_page.py  layout.py  object_deactivate.py  object_detail.py  object_geojson.py  object_list.py  object_page.py  objects.py  operator_page.py  public_pages.py  top_objects.py  top_operators.py  translations.py  users.py
api/static/: map.html  ylff-map.html  ylff-theme.css
scripts/: ylff-deploy.sh
