[project]
name = "ylff-api"
version = "0.1.0"
requires-python = ">=3.14,<3.15"

dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy>=2.0.51",
    "duckdb",
    "duckdb-engine",
    "python-dotenv>=1.2.2",
    "click>=8.4.1",
    "greenlet>=3.5.2",
    "pyjwt>=2.13.0",
     "openpyxl>=3.1.5",
]
